content/content.css
.foqus-overlay {
    background: rgba(0, 0, 0, 0.8);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 9999;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.foqus-overlay-title {
    font-size: 50px;
    color: white;
    padding-bottom: 10px;
}

.foqus-overlay-countdown {
    font-size: 36px;
    color: white;
    font-weight: 600;
    padding-bottom: 20px;
    letter-spacing: 0.05em;
}

.foqus-overlay-subtitle {
    font-size: 15px;
    color: white;
    padding-bottom: 10px
}

.foqus-overlay-suggested-sites {
    list-style: none;
    display: grid;
    grid-gap: 4px;
}

.foqus-overlay-suggested-sites > li {
    background: white;
    padding: 20px;
}

.foqus-overlay-suggested-sites > li > a {
    font-weight: 800;
}

.foqus-overlay-button {
    font-size: 20px;
    background-color: transparent;
    color: white;
    border: none;
    text-decoration: underline;
    margin: 5px;
    padding: 5px;
    cursor: pointer;
}

